--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
+    "@antv/x6": "1.35.0",
+    "@antv/x6-vue-shape": "1.5.4",
+    "@vueuse/core": "^10.9.0",
+    "ant-design-vue": "^4.1.2",
     "vue": "^3.4.21"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@vitejs/plugin-vue": "^5.0.4",
-    "typescript": "^5.2.2",
+    "typescript": "^5.4.2",
     "vite": "^5.1.6",
     "vue-tsc": "^1.8.27"
   }
