--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@antv/x6-vue-shape": "1.5.4",
     "@vueuse/core": "^10.9.0",
     "ant-design-vue": "^4.1.2",
+    "lodash": "^4.17.21",
     "vue": "^3.4.21"
   },
   "devDependencies": {
